# contracts/openapi/review-service.yaml
@@ -227,6 +227,10 @@ components:
         comment:
           type: string
           nullable: true
+        tipAmount:
+          type: integer
+          minimum: 0
+          nullable: true
         status:
           type: string
         statusUpdatedAt:
@@ -249,6 +253,9 @@ components:
           maximum: 5
         comment:
           type: string
+        tipAmount:
+          type: integer
+          minimum: 0
         status:
           type: string
     UpdateReviewRequest:
@@ -260,6 +267,9 @@ components:
           maximum: 5
         comment:
           type: string
+        tipAmount:
+          type: integer
+          minimum: 0
         status:
           type: string
         statusReason:
